Initial scaffolding for User Management Service